# stock

./: .coverage  .gitignore  Dockerfile  backend.py  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini  readme.md  requirements.txt  sonar-project.properties  test.py  tox.ini
.github/workflows/: python-tests.yml
src/: app.py  app_controller.py  db.py  html_methods.py  location.py  model.py  pages.py  path.py  product.py  stock.py  utils.py  web.py
src/model/: locations_service.py  locations_utils.py  model.py  products_service.py  products_utils.py  stock_service.py  stock_utils.py  timeline_service.py
src/routes/: location.py  pages.py  product.py  stock.py  timeline.py
src/services/: locations_service.py  products_service.py  stock_service.py  timeline_service.py
src/templates/: base.html  edit-location.html  location.html  product.html  stock-timeline.html  stock.html
templates/: base.html  edit-location.html  location.html  product.html  stock.html
test/: .coverage  coverage.xml  test_foo.py  test_location.py  test_pages.py  test_product.py  test_stock.py
test/routes/: test_location.py  test_stock.py
test/utils/: .coverage  coverage.xml  tes_locations_utils.py  test_stock_utils.py
tests/: coverage.xml  test_location.py  test_pages.py  test_product.py  test_stock.py
tests/routes/: .coverage  coverage.xml  test_location.py  test_pages.py  test_product.py  test_stock.py  test_timeline.py
tests/services/: .coverage  coverage.xml  test_location_service.py  test_product_service.py  test_stock_service.py  test_timeline_service.py
(+2 files in other folders)
