[tool.poetry]
name = "stock"
version = "0.1.0"
description = ""
authors = ["13am028 <71486982+13am028@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^2.0.0"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
waitress = "^2.1.2"
SQLAlchemy-Utils = "^0.39.0"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.2"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
